[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "kryptor"
version = "0.5.0"
authors = [
  { name="Het Joshi (DENCODER)", email="hetcjoshi1684@gmail.com" },
]
description = "Encrypt and Decrypt data with famous cryptography techniques"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/D-ENCODER/KRYPTOR"
"Bug Tracker" = "https://github.com/D-ENCODER/KRYPTOR/issues"